-Autoconfig autocomplete contacts -Fix top menu + banner on smaller resolutions

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,7 @@ body {
     margin-left: 80px;
 }
 
-@media screen and (min-width: 1360px) {
+@media only screen and (min-width: 1361px) {
     .logo {
         margin: 5px 15%;
     }
